--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WellnessVibes - Your Wellness Journey</title>
-    <link rel="stylesheet" href="profil.css" />
+    <link rel="stylesheet" href="index.css" />
     <link
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -223,3 +223,4 @@
     </div>
   </div>
 </footer>
+
